countdown container added

--- a/learn.html
+++ b/learn.html
@@ -4,11 +4,30 @@
     <meta charset=UTF-8>
     <meta name="viewport" content="width=device, initial-scale=1.0">
     <title>Countdown Timer</title>
+    <link rel="stylesheet" href="learn.css">
     <script src="learn.js"></script>
 
 </head>
 <body>
-    <h1>Countdown Timer</h1>
+    <h1>New Year Countdown Timer</h1>
+    <div class="countdown-container">
+        <div class="days-container">
+            <p class="bigtext" id="days"></p>
+            <span>days</span>
+        </div>
+        <div class="hours-container">
+            <p class="bigtext" id="hours"></p>
+            <span>hours</span>
+        </div>
+        <div class="min-container">
+            <p class="bigtext" id="min"></p>
+            <span>min</span>
+        </div>
+        <div class="sec-container">
+            <p class="bigtext" id="sec"></p>
+            <span>sec</span>
+        </div>
+    </div>
 
 </body>
 </html>
