padding and margin

--- a/learn.html
+++ b/learn.html
@@ -12,19 +12,19 @@
     <h1>New Year Countdown Timer</h1>
     <div class="countdown-container">
         <div class="days-container">
-            <p class="bigtext" id="days"></p>
+            <p class="big-text" id="days">0</p>
             <span>days</span>
         </div>
         <div class="hours-container">
-            <p class="bigtext" id="hours"></p>
+            <p class="big-text" id="hours">0</p>
             <span>hours</span>
         </div>
         <div class="min-container">
-            <p class="bigtext" id="min"></p>
+            <p class="big-text" id="min">0</p>
             <span>min</span>
         </div>
         <div class="sec-container">
-            <p class="bigtext" id="sec"></p>
+            <p class="big-text" id="sec">0</p>
             <span>sec</span>
         </div>
     </div>
