--- a/learn.html
+++ b/learn.html
@@ -11,19 +11,19 @@
 <body>
     <h1>New Year Countdown Timer</h1>
     <div class="countdown-container">
-        <div class="days-container">
+        <div class="countdown-el days-container">
             <p class="big-text" id="days">0</p>
             <span>days</span>
         </div>
-        <div class="hours-container">
+        <div class="countdown-el hours-container">
             <p class="big-text" id="hours">0</p>
             <span>hours</span>
         </div>
-        <div class="min-container">
+        <div class="countdown-el min-container">
             <p class="big-text" id="min">0</p>
             <span>min</span>
         </div>
-        <div class="sec-container">
+        <div class="countdown-el sec-container">
             <p class="big-text" id="sec">0</p>
             <span>sec</span>
         </div>
