--- a/learn.html
+++ b/learn.html
@@ -20,11 +20,11 @@
             <span>hours</span>
         </div>
         <div class="countdown-el min-container">
-            <p class="big-text" id="min">0</p>
+            <p class="big-text" id="mins">0</p>
             <span>min</span>
         </div>
         <div class="countdown-el sec-container">
-            <p class="big-text" id="sec">0</p>
+            <p class="big-text" id="seconds">0</p>
             <span>sec</span>
         </div>
     </div>
